closer to working

--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -44,6 +44,9 @@ log4j.logger.net.sf.hibernate=info
 ### log Specify parameters ###
 edu.ku.brc.specify.config.SpecifyConfig=all
 
+### log Digester parameters ###
+org.apache.commons.digester.Digester=info, error, debug
+
 ### log JDBC bind parameters ###
 log4j.logger.net.sf.hibernate.type=info
 
