--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -2,7 +2,7 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{2}:%L - %m%n
 
 
 ### direct messages to file hibernate.log ###
@@ -12,12 +12,10 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 
-### direct messages to file hibernate.log ###
+### direct messages to file specify.log ###
 log4j.appender.specifylogfile=org.apache.log4j.FileAppender
 log4j.appender.specifylogfile.File=specify.log
 log4j.appender.specifylogfile.Append=false
-log4j.appender.specifylogfile.MaxFileSize=512KB
-log4j.appender.specifylogfile.MaxBackupIndex=5
 log4j.appender.specifylogfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.specifylogfile.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{2}:%L - %m%n
 
@@ -56,7 +54,7 @@ log4j.logger.net.sf.hibernate.tool.hbm2ddl=info
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
 
-log4j.logger.edu.ku.brc.hyla=debug, specifylogfile, DAY
+log4j.logger.edu.ku.brc.specify=info, specifylogfile
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
