--- a/trunk/Specify/build.xml
+++ b/trunk/Specify/build.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
-<project name="Harnessing Hibernate: The Developer's Notebook"
-         default="db" basedir=".">
+<project name="Specify 6.0 Build File" default="db" basedir=".">
 
   <!-- Set up properties containing important project directories -->
   <property name="source.root" value="src"/>
-  <property name="class.root" value="classes"/>
+  <property name="class.root" value="bin"/>
   <property name="lib.dir" value="libs"/>
   <property name="hibernatelib.dir" value="hibernate_libs"/>
   <property name="externallib.dir" value="external_libs"/>
@@ -207,7 +206,7 @@
             </fileset>
          </configuration>
          <!-- <hbm2java /> -->
-         <hbm2ddl />
+         <hbm2ddl update="true"/>
       </hibernatetool>
    </target> 
 </project>
