--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -146,7 +146,7 @@
             </fileset>
          </configuration>
          <!-- <hbm2java /> -->
-         <hbm2ddl update="false"/>
+         <hbm2ddl update="true"/>
       </hibernatetool>
    </target>
 
