--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -40,10 +40,11 @@ log4j.appender.DAY.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{2}:%L - %m%n
 log4j.rootLogger=info, stdout, specifylogfile
 ###, debug, info
 
-log4j.logger.net.sf.hibernate=info, hibernatelogfile
+log4j.logger.org.hibernate=error, hibernatelogfile
 
 ### log just the SQL
-#log4j.logger.net.sf.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=debug
+
 
 ### log Specify parameters ###
 edu.ku.brc.specify.config.SpecifyConfig=all
@@ -52,10 +53,10 @@ edu.ku.brc.specify.config.SpecifyConfig=all
 org.apache.commons.digester.Digester=info, error, debug
 
 ### log JDBC bind parameters ###
-log4j.logger.net.sf.hibernate.type=info
+log4j.logger.org.hibernate.type=error
 
 ### log schema export/update ###
-log4j.logger.net.sf.hibernate.tool.hbm2ddl=info
+log4j.logger.org.hibernate.tool.hbm2ddl=info
 
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
@@ -64,4 +65,4 @@ log4j.logger.edu.ku.brc.specify=info, specifylogfile
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
-#log4j.logger.net.sf.hibernate.connection.DriverManagerConnectionProvider=trace
+#log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
