--- a/trunk/Specify/src/hibernate.properties
+++ b/trunk/Specify/src/hibernate.properties
@@ -35,3 +35,4 @@ hibernate.cglib.use_reflection_optimizer=true
 #hibernate.jdbc.fetch_size=125
 #hibernate.jdbc.use_streams_for_binary=true
 #hibernate.show_sql=true
+#hibernate
