--- a/Specify/src/hibernate.properties
+++ b/Specify/src/hibernate.properties
@@ -16,7 +16,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 #hibernate.connection.driver_class=com.p6spy.engine.spy.P6SpyDriver
-hibernate.connection.url=jdbc:mysql://localhost/demo_fish3
+hibernate.connection.url=jdbc:mysql://localhost/fish
 #//hibernate.connection.url=jdbc:mysql://129.237.201.166/demo_fish
 
 hibernate.connection.username=rods
