This checkin is mostly for getting the Database login dialog working and it changes the view registry to use files with the views.xml extension instead of form.xml this also contents misc clean ups

--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -61,7 +61,7 @@ log4j.logger.org.hibernate.tool.hbm2ddl=info
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
 
-log4j.logger.edu.ku.brc.specify=info, specifylogfile
+log4j.logger.edu.ku.brc.specify=all, specifylogfile
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
