setting it back to fish

--- a/Specify/src/hibernate.properties
+++ b/Specify/src/hibernate.properties
@@ -16,7 +16,7 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 #hibernate.connection.driver_class=com.p6spy.engine.spy.P6SpyDriver
-hibernate.connection.url=jdbc:mysql://localhost/accessions
+hibernate.connection.url=jdbc:mysql://localhost/fish
 #//hibernate.connection.url=jdbc:mysql://129.237.201.166/demo_fish
 
 hibernate.connection.username=rods
@@ -32,7 +32,7 @@ hibernate.cglib.use_reflection_optimizer=true
 #hibernate.cglib.use_reflection_optimizer=false
 #hibernate.query.factory_class=org.hibernate.hql.classic.ClassicQueryTranslatorFactory
 #hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
-#hibernate.cache.use_query_cache=true		
+#hibernate.cache.use_query_cache=true
 #hibernate.jdbc.use_scrollable_resultset=true
 #hibernate.jdbc.batch_size=125
 #hibernate.jdbc.batch_versioned_data=true
