--- a/trunk/Specify/src/hibernate.properties
+++ b/trunk/Specify/src/hibernate.properties
@@ -1,8 +1,8 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-#hibernate.connection.url=jdbc:mysql://localhost/accessions
+hibernate.connection.url=jdbc:mysql://localhost/accessions
 #hibernate.connection.url=jdbc:mysql://localhost/cranbrook
-hibernate.connection.url=jdbc:mysql://localhost/fish
+#hibernate.connection.url=jdbc:mysql://localhost/fish
 hibernate.connection.username=rods
 hibernate.connection.password=rods
 hibernate.max_fetch_depth=3
