Code for generating the datamodel document.  Uses input file.
Instructions for using:

Regenerate Datamodel Document - 
- The datamodel document is named "Hyla\config\specify_datamodel.xml"
- You can regenerate the datamodel file by running "generateDatamodelDoc" from the build file.  
- Or run the class "edu.ku.brc.specify.tools.datamodelgenerator.DatamodelGenerator". 

Adding tables to the project - 
- If we add any new tables add them to the ""Hyla\config\specify_tableid_listing.xml" file.  Make sure you assign it a table id (that is not already in-use), then regenerate the datamodel file.

Adding default views for tables - 
- Edit the listing for the table in the "Hyla\config\specify_tableid_listing.xml" file, then regenerate the datamodel file.

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -124,7 +124,14 @@
     </java>
   </target>
 
-   <target name="gencode">
+	  <target name="generateDatamodelDoc" description="Generates datamodel document" depends="compile">
+	    <java classname="edu.ku.brc.specify.tools.datamodelgenerator.DatamodelGenerator" fork="true">
+	      <classpath refid="project.class.path"/>
+	    </java>
+	  </target>	
+   
+	
+	<target name="gencode">
       <!-- bit of a best guess, I'm afraid -->
      <mkdir dir="${hibernate.generated.code.destdir}"/>
      <hibernatetool destdir="${hibernate.generated.code.destdir}">
