Additional fixes to AppContextMgr to better support the notion of default form sets. Fixes Bug 3539 Also, updated the JStatusBar so it can handle multi "sections" for displaying additional information.

--- a/Specify/src/hibernate.properties
+++ b/Specify/src/hibernate.properties
@@ -1,8 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-#hibernate.connection.url=jdbc:mysql://localhost/accessions
-#hibernate.connection.url=jdbc:mysql://localhost/cranbrook
-hibernate.connection.url=jdbc:mysql://localhost/fish
+hibernate.connection.url=jdbc:mysql://localhost/accessions
 hibernate.connection.username=rods
 hibernate.connection.password=rods
 hibernate.max_fetch_depth=3
