--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -61,6 +61,8 @@ log4j.logger.org.hibernate.tool.hbm2ddl=info
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
 
+log4j.logger.edu.ku.brc.af=all, specifylogfile
+log4j.logger.edu.ku.brc.ui=all, specifylogfile
 log4j.logger.edu.ku.brc.specify=all, specifylogfile
 
 ### enable the following line if you want to track down connection ###
