--- a/trunk/Specify/src/log4j.properties
+++ b/trunk/Specify/src/log4j.properties
@@ -61,7 +61,7 @@ log4j.logger.org.hibernate.tool.hbm2ddl=info
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
 
-log4j.logger.edu.ku.brc=debug, specifylogfile
+log4j.logger.edu.ku.brc=info, specifylogfile
 #log4j.logger.edu.ku.brc.ui=all, specifylogfile
 #log4j.logger.edu.ku.brc.util=all, specifylogfile
 #log4j.logger.edu.ku.brc.specify=all, specifylogfile
