--- a/trunk/Specify/src/hibernate.properties
+++ b/trunk/Specify/src/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost/accessions
+hibernate.connection.url=jdbc:mysql://localhost/annos
 hibernate.connection.username=rods
 hibernate.connection.password=rods
 hibernate.max_fetch_depth=3
