--- a/trunk/Specify/src/log4j.properties
+++ b/trunk/Specify/src/log4j.properties
@@ -40,7 +40,7 @@ log4j.appender.DAY.layout.ConversionPattern=%d{HH:mm:ss} %5p %c{2}:%L - %m%n
 log4j.rootLogger=debug, stdout, specifylogfile
 ###, debug, info
 
-log4j.logger.org.hibernate=info, hibernatelogfile
+log4j.logger.org.hibernate=warn, hibernatelogfile
 
 ### log just the SQL
 log4j.logger.org.hibernate.SQL=info
