--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -37,7 +37,7 @@ log4j.appender.DAY.layout.ConversionPattern=%d{HH:mm:ss} %5p %c{2}:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
-log4j.rootLogger=debug, stdout, specifylogfile
+log4j.rootLogger=warn, stdout, specifylogfile
 ###, debug, info
 
 log4j.logger.org.hibernate=warn, hibernatelogfile
