Removed or changed a couple more System.out messages. Changed some default log levels.

--- a/Specify/src/log4j.properties
+++ b/Specify/src/log4j.properties
@@ -56,7 +56,7 @@ org.apache.commons.digester.Digester=info, error, debug
 log4j.logger.org.hibernate.type=error
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=info
+log4j.logger.org.hibernate.tool.hbm2ddl=warn
 
 ### log cache activity ###
 #log4j.logger.net.sf.hibernate.cache=info
