CONVERSION TO ANNOTATIONS!
Moved HBMs to "Old HBMs" folder.
Modified build.xml, HibernateUtils.java and hibernate.cfg.xml to enable annotations.
Modified the DB conversion code to handle the fact that the annotations have TimestampModified and TimestampCreated as not-null for ALMOST EVERY table.

--- a/Specify/build.xml
+++ b/Specify/build.xml
@@ -141,16 +141,16 @@
 	<target name="genschema">
 		<!-- bit of a best guess, I'm afraid -->
 		<hibernatetool destdir="${source.root}">
+			<annotationconfiguration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
+			<!--
 			<configuration propertyFile="src/${hibernate.properties}">
 				<fileset dir="${source.root}">
 					<include name="**/*.hbm.xml" />
 				</fileset>
 			</configuration>
-			<!--
-			<annotationconfiguration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
 			<configuration propertyFile="src/${hibernate.properties}" configurationfile="src/${hibernate.cfg}" />
 			-->
-			<hbm2ddl update="false" export="true" outputfilename="specify6.sql"/>
+			<hbm2ddl update="false" export="true"/>
 		</hibernatetool>
 	</target>
 
